# fragments

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyrightconfig.json  tsconfig.e2e.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.github/workflows/: build-macos.yml  pages.yml
docs/plans/: 2026-03-04-fragments-design.md  2026-03-04-fragments-implementation.md
e2e/: app.e2e.ts  citations.e2e.ts  editor.e2e.ts  helpers.ts  project.e2e.ts  search.e2e.ts
scripts/: build_corpus.py  pyproject.toml
scripts/corpus_builder/: csv_loader.py  extract_epub.py  extract_markdown.py  extract_pdf.py  ids.py  pipeline.py
scripts/tests/: conftest.py  test_csv_loader.py  test_extract_epub.py  test_extract_markdown.py  test_extract_pdf.py  test_ids.py  test_pipeline.py
src/: App.css  App.tsx  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crossref.rs  db.rs  kobo.rs  lib.rs  main.rs  pdf.rs  search.rs
src/components/: AppError.tsx  AppLoading.tsx  CitationsPanel.css  CitationsPanel.tsx  DocumentList.tsx  EditorPanel.css  EditorPanel.tsx  FragmentExpandModal.css  FragmentExpandModal.tsx  LibraryPanel.css  LibraryPanel.tsx  MetadataEditor.tsx  ProjectList.tsx  SearchPanel.css  SearchPanel.test.tsx  SearchPanel.tsx  SearchResult.tsx  SectionNav.css  SectionNav.tsx  Toolbar.css  Toolbar.tsx
src/context/: CorpusContext.tsx
src/extensions/: AutocompleteDropdown.css  AutocompleteDropdown.tsx  FragmentAutocomplete.ts  FragmentMark.css  (+5 more)
(+25 files in other folders)
